文章分类逻辑调整